--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,11 @@
 	<packaging>jar</packaging>
 
 	<name>seller-api-client</name>
-	<url>http://maven.apache.org</url>
+	<scm>
+		<connection>scm:git:ssh://git@github.com:bliblidotcom/seller-api-client-java.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com:bliblidotcom/seller-api-client-java.git</developerConnection>
+		<tag>HEAD</tag>
+	</scm>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -46,4 +50,16 @@
 			<version>${commons.lang3.version}</version>
 		</dependency>
 	</dependencies>
+
+	<repositories>
+		<repository>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<id>bintray-bliblidotcom-maven</id>
+			<name>bintray</name>
+			<url>https://dl.bintray.com/bliblidotcom/maven</url>
+		</repository>
+	</repositories>
+
 </project>
