[maven-release-plugin] prepare release seller-api-client-ansdmfbasdmfvn

--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,16 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.gdn.partners.mtaapi.client</groupId>
 	<artifactId>seller-api-client</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>ansdmfbasdmfvn</version>
 	<packaging>jar</packaging>
 
 	<name>seller-api-client</name>
 	<scm>
 		<connection>scm:git:ssh://git@github.com:bliblidotcom/seller-api-client-java.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com:bliblidotcom/seller-api-client-java.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>seller-api-client-ansdmfbasdmfvn</tag>
 	</scm>
 
 	<properties>
