--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>com.blibli.oss.sellerapi.client</groupId>
 	<artifactId>seller-api-client</artifactId>
-	<version>ansdmfbasdmfvn</version>
+	<version>1.0.0-1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>seller-api-client</name>
