--- a/pom.xml
+++ b/pom.xml
@@ -3,15 +3,30 @@
 
 	<groupId>com.blibli.oss.sellerapi.client</groupId>
 	<artifactId>seller-api-client</artifactId>
-	<version>1.2.0-1-SNAPSHOT</version>
+	<version>1.2.0-1</version>
 	<packaging>jar</packaging>
-
 	<name>seller-api-client</name>
+	<description>Seller API Client</description>
+	<url>https://github.com/bliblidotcom/seller-api-client-java</url>
+
 	<scm>
 		<connection>scm:git:ssh://git@github.com:bliblidotcom/seller-api-client-java.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com:bliblidotcom/seller-api-client-java.git</developerConnection>
-		<tag>HEAD</tag>
+		<url>https://github.com/bliblidotcom/seller-api-client-java</url>
 	</scm>
+
+	<developers>
+		<developer>
+			<name>Blibli</name>
+		</developer>
+	</developers>
+
+	<licenses>
+		<license>
+			<name>The Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+		</license>
+	</licenses>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -49,11 +64,76 @@
 		</dependency>
 	</dependencies>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.2.1</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.9.1</version>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.sonatype.plugins</groupId>
+				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<version>1.6.7</version>
+				<extensions>true</extensions>
+				<configuration>
+					<serverId>ossrh</serverId>
+					<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
+					<autoReleaseAfterClose>false</autoReleaseAfterClose>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>1.5</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+						<configuration>
+							<gpgArguments>
+								<arg>--pinentry-mode</arg>
+								<arg>loopback</arg>
+							</gpgArguments>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+
 	<distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
 		<repository>
-			<id>bintray-bliblidotcom-maven</id>
-			<name>bliblidotcom-maven</name>
-			<url>https://api.bintray.com/maven/bliblidotcom/maven/seller-api-client-java/;publish=1</url>
+			<id>ossrh</id>
+			<url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
 		</repository>
 	</distributionManagement>
 
